--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,20 @@
     <string name="app_name">Assignment</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_user_login">UserLoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="required">Required</string>
+    <string name="register"><u>Haven\'t Register yet? \nRegister here!</u></string>
+    <string name="login_page">Login Page</string>
+    <string name="login">Login</string>
+    <string name="clear">Clear</string>
+    <string name="confirmPassword">Confirm Password</string>
+    <string name="phone">Phone Number</string>
 </resources>
