--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="clear">Clear</string>
     <string name="confirmPassword">Confirm Password</string>
     <string name="phone">Phone Number</string>
+    <string name="UserProfile">User Profile</string>
 </resources>
