--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,20 @@
     <string name="user_address">  <u>Address</u></string>
     <string name="user_birthday">  <u>Birthday</u></string>
     <string name="user_status">  <u>Status</u></string>
+    <string name="please_upload_photo">Please upload the photo of your IC \n ( Front &amp; Back )</string>
+    <string name="AdminProfile">Admin Profile</string>
+    <string name="AboutUs">About Us</string>
+    <string name="AboutUsIntro">This app is made by:\n1.Benedict Tea Shang Zhe\n2.Fong Jun Yi\n3.Lai Ming Huan\n4.Jordan Ng Kentzu\n\n\nContact Us?</string>
+    <string name="ContactUsPhone"><u>Phone</u></string>
+    <string name="ContactUsEmail"><u>E-mail</u></string>
+    <string name="title_activity_check_approved_users">CheckApprovedUsers</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="ReviewOfApprovalApplication">Review of Approval Application</string>
 </resources>
