--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="ReviewOfApprovalApplication">Review of Approval Application</string>
+    <string name="ApprovalApplication">User\'s Approval Application</string>
 </resources>
